...
    DocumentReference userDoc = context
        .watch<UserListProvider>()
        .getUserById(context.watch<AuthProvider>().user!.uid);

    String uid = userDoc.id;
    return Scaffold(
      key: const Key('profilePage'),
      resizeToAvoidBottomInset: false,
      drawer: Drawer(
        child: Drawer(
          child: ListView(padding: EdgeInsets.zero, children: [
            const DrawerHeader(
              decoration: BoxDecoration(
...
